--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -57,7 +57,7 @@
 }
 
 .form-contacts {
-    background-image: url(src\Безымян3ный.png);
+    background-image: url(src\Безымян3ный.jpg);
     background-repeat: no-repeat;
     background-size: 100% auto;
 }
