--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -9,3 +9,419 @@
 .test {
     color: red !important;
 }
+@import "./global.css";
+@import "./fonts.css";
+@import "./utils.css";
+
+body {
+    font-family: "Inter";
+    font-weight: 400;
+    margin: 0;
+}
+
+.main-header {
+    width: 80%;
+    background-color: #fff;
+    position: fixed;
+    left: 10%;
+    top: 10px;
+    border-radius: 5px;
+    box-shadow: 0 0 15px 1px #d2d2d2;
+}
+
+.header-navigation {
+    display: flex;
+    justify-content: space-between;
+}
+
+.header-logo {
+    text-transform: uppercase;
+    text-decoration: none;
+    color: rgb(0, 136, 255);
+    font-size: 20px;
+    font-weight: 700;
+    padding: 10px 25px;
+    margin: 0;
+}
+
+.header-links {
+    display: flex;
+    list-style-type: none;
+    padding: 10px 10px;
+    font-size: 15px;
+    margin: 0;
+}
+
+.header-links li {
+    padding: 0px 10px;
+    margin: auto;
+}
+
+.header-links a {
+    text-decoration: none;
+    color: #000;
+}
+
+.header-links-blue a {
+    color: rgb(0, 136, 255);
+}
+
+.main-block {
+    background-color: #ececec;
+    min-height: 500px;
+}
+
+.start-block {
+    width: 100%;
+    padding: 130px 700px 200px 130px;
+    background: url(/src/images/backgroung-start.png);
+    background-position: right 20%;
+    background-repeat: no-repeat;
+    margin: 0;
+}
+
+.big-title {
+    font-size: 40px;
+}
+
+.main-text-blue {
+    color: rgb(0, 136, 255);
+}
+
+.block-form {
+    padding: 30px;
+    background-color: #fff;
+    border-radius: 10px;
+    margin-top: 50px;
+}
+
+.block-form h3 {
+    font-size: 20px;
+    margin: 0;
+}
+
+.form-contacts {
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.form-contacts label {
+    display: block;
+    font-size: 14px;
+    color: #4d4d4d;
+}
+
+.form-contacts input {
+    font-size: 15px;
+    border: 0px;
+    border-bottom: 1px solid #d5d5d5;
+    padding-top: 15px;
+    outline: none;
+}
+
+.form-button {
+    background-color: rgb(0, 136, 255);
+    color: #fff;
+    font-weight: 700;
+    border: 0px;
+    border-radius: 10px;
+    text-align: left;
+    padding: 0px 20px;
+}
+
+.blocks-center {
+    width: 1100px;
+    margin: 0 auto;
+    padding: 60px 0px;
+}
+
+.development-info {
+    display: flex;
+}
+
+.development-info-text {
+    width: 500px;
+}
+
+.development-info-text .development-paragraph {
+    margin: 30px 0px;
+}
+
+.development-info-text h3 {
+    margin-top: 40px;
+}
+
+.development-info-list {
+    width: 250px;
+    margin: 0 auto;
+    font-size: 20px;
+}
+
+.info-list {
+    list-style-type: none;
+    padding: 0;
+}
+
+.info-list li {
+    padding: 13px 0px;
+}
+
+.info-list a {
+    color: #000;
+    text-decoration: none;
+}
+
+.info-list a:hover {
+    font-weight: 700;
+    text-decoration: underline;
+    text-decoration-color: rgb(0, 136, 255);
+}
+
+.project-list {
+    width: 1000px;
+    display: flex;
+    justify-content: space-between;
+    font-size: 17px;
+}
+
+.project-list ul {
+    list-style-type: none;
+    margin: 0;
+}
+
+.project-list li {
+    padding: 15px 0px;
+}
+
+.blocks-iteka-desc {
+    width: 1100px;
+    background: url(/src/images/i-teka-phone.png);
+    background-position: top right;
+    background-size: 450px;
+    background-repeat: no-repeat;
+}
+
+.project-iteka-list {
+    display: flex;
+    justify-content: space-between;
+}
+
+.project-iteka-list ul {
+    padding: 0;
+    list-style-type: none;
+    display: flex;
+    margin: 15px 0px;
+}
+
+.project-iteka-list li {
+    padding: 0px 10px;
+}
+
+.iteka-list-link {
+    margin: 15px 0px;
+    color: #000;
+    text-decoration: none;
+}
+
+.link-current {
+    font-weight: 700;
+    border-bottom: 2px solid rgb(0, 136, 255);
+    padding-bottom: 5px;
+}
+
+.iteka-list-button {
+    color: #fff;
+    margin: auto 0;
+    text-decoration: none;
+    padding: 10px 20px;
+    background-color: rgb(0, 136, 255);
+    border-radius: 10px;
+}
+
+.project-iteka-desc {
+    width: 650px;
+}
+
+.iteka-desc-text {
+    margin: 40px 0px;
+}
+
+.iteka-enum {
+    color: #575757;
+}
+
+.iteka-list-contacts {
+    padding: 0;
+    list-style-type: none;
+    display: flex;
+    gap: 50px;
+    margin: 40px 0px;
+}
+
+.iteka-number-info {
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.iteka-number-text {
+    font-size: 13px;
+    color: #575757;
+}
+
+.background-blue {
+    background-color: rgb(0, 136, 255);
+    color: #fff;
+}
+
+.block-discuss {
+    display: flex;
+    justify-content: space-between;
+}
+
+.form-discuss-text {
+    width: 450px;
+}
+
+.form-discuss {
+    background-color: #fff;
+    border-radius: 10px;
+    width: 600px;
+    margin: 30px 0px;
+    padding: 20px;
+}
+
+.contacts-discuss {
+    flex-wrap: wrap;
+}
+
+.contacts-discuss input {
+    width: 250px;
+    padding: 15px;
+}
+
+.button-discuss {
+    margin-left: auto;
+    margin-top: 30px;
+    padding: 10px 20px;
+}
+
+.applications {
+    display: grid;
+    grid-template-columns: 400px 400px;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.application-text {
+    width: 400px;
+    padding: 20px 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px 1px #dcdcdc;
+}
+
+.our-team-text {
+    width: 600px;
+    padding: 60px 0px;
+}
+
+.our-team-list {
+    padding: 0;
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+    margin: 60px 0px;
+}
+
+.our-team-list h3 {
+    font-size: 50px;
+    padding: 0;
+    margin: 0;
+}
+
+.our-team-list p {
+    padding: 0;
+    margin: 0;
+}
+
+.contacts-book {
+    width: 1100px;
+    display: flex;
+    margin: 0 auto;
+    justify-content: space-between;
+    padding: 40px;
+}
+
+.contacts-book-form-block {
+    width: 550px;
+    background-color: #fff;
+    border-radius: 10px;
+}
+
+.contacts-book-form {
+    flex-wrap: wrap;
+    padding: 20px;
+}
+
+.contacts-book-form label {
+    padding: 20px 0px;
+}
+
+.long-email-input {
+    width: 500px;
+}
+
+.background-white {
+    background-color: #fff;
+    padding: 30px 0px;
+}
+
+.faq-question-list {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    height: 420px;
+    column-gap: 30px;
+}
+
+.faq-question-list li {
+    width: 550px;
+    padding: 20px 10px;
+    border-bottom: 1px solid #dadada;
+    border-top: 1px solid #dadada;
+}
+
+.main-footer {
+    background-color: rgb(26, 26, 35);
+    color: #fff;
+    padding: 20px 10px;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.main-footer h2{
+    text-transform: uppercase;
+    font-size: 40px;
+    margin: 0;
+}
+
+.our-contacts-list {
+    display: flex;
+    justify-content: space-between;
+    padding: 0px 100px 0px 30px;
+    list-style-type: none;
+}
+
+.our-contacts-list h3 {
+    margin: 0;
+    font-weight: 400;
+    font-size: 13px;
+    color: #aeaeae;
+    text-align: left;
+}
+
+.our-contacts-list p{
+    font-weight: 500;
+}
