--- a/src/assets/styles/fonts.css
+++ b/src/assets/styles/fonts.css
@@ -1,19 +1,5 @@
 @font-face {
     font-family: "Inter";
-    src: url("/static/fonts/Inter-Black.ttf") format("truetype"),
-        url("/static/fonts/Inter-Black.ttf") format("woff2");
-    font-weight: 900;
-}
-
-@font-face {
-    font-family: "Inter";
-    src: url("/static/fonts/Inter-ExtraBold.ttf") format("truetype"),
-        url("/static/fonts/Inter-ExtraBold.woff2") format("woff2");
-    font-weight: 800;
-}
-
-@font-face {
-    font-family: "Inter";
     src: local('Inter'), local('Inter-Bold'), local('Inter Bold'),
          url("/static/fonts/Inter-Bold.ttf") format("truetype"),
          url("/static/fonts/Inter-Bold.woff2") format("woff");
@@ -22,8 +8,7 @@
 
 @font-face {
     font-family: "Inter";
-    src: url("/static/fonts/Inter-SemiBold.ttf") format("truetype"),
-    url("/static/fonts/Inter-SemiBold.woff2") format("woff2");
+    src: url("/static/fonts/Inter-SemiBold.ttf") format("truetype");
     font-weight: 600;
 }
 
@@ -44,22 +29,49 @@
 }
 
 @font-face {
-    font-family: "Inter";
-    src: url("/static/fonts/Inter-LightBETA.ttf") format("truetype"),
-        url("/static/fonts/Inter-LightBETA.woff2") format("woff2");
-    font-weight: 300;
+    font-family: "SF Pro Text";
+    src: url(/static/fonts/SFProText-Regular.ttf) format("truetype");
+    font-weight: 400;
 }
 
 @font-face {
-    font-family: "Inter";
-    src: url("/static/fonts/Inter-ExtraLightBETA.ttf") format("truetype"),
-        url("/static/fonts/Inter-ExtraLightBETA.woff2") format("woff2");
-    font-weight: 200;
+    font-family: "SF Pro Text";
+    src: url(/static/fonts/SFProText-Medium.ttf) format("truetype");
+    font-weight: 500;
 }
 
 @font-face {
-    font-family: "Inter";
-    src: url("/static/fonts/Inter-ThinBETA.ttf") format("truetype"),
-        url("/static/fonts/Inter-ThinBETA.woff2") format("woff2");
-    font-weight: 100;
+    font-family: "SF Pro Text";
+    src: url(/static/fonts/SFProText-Semibold.ttf) format("truetype");
+    font-weight: 600;
+}
+
+@font-face {
+    font-family: "SF Pro Text";
+    src: url(/static/fonts/SFProText-Bold.ttf) format("truetype");
+    font-weight: 700;
+}
+
+@font-face {
+    font-family: "SF Pro Display";
+    src: url(/static/fonts/SF-Pro-Display-Regular.ttf) format("truetype");
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: "SF Pro Display";
+    src: url(/static/fonts/SF-Pro-Display-Medium.ttf) format("truetype");
+    font-weight: 500;
+}
+
+@font-face {
+    font-family: "SF Pro Display";
+    src: url(/static/fonts/SF-Pro-Display-Semibold.ttf) format("truetype");
+    font-weight: 600;
+}
+
+@font-face {
+    font-family: "SF Pro Display";
+    src: url(/static/fonts/SF-Pro-Display-Bold.ttf) format("truetype");
+    font-weight: 700;
 }
