--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -1,87 +1,289 @@
-@import url("./global.css");
+@import "./global.css";
 @import "./fonts.css";
 @import "./utils.css";
+@import "./typography.css";
 
-.test {
-    color: yellow !important;
+.block-header {
+    width: 1224px;
+    margin: 0 auto;
 }
 
-.test {
-    color: red !important;
+.main-header {
+    width: 1124px;
+    background-color: #fff;
+    position: fixed;
+    top: 24px;
+    border-radius: 12px;
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.08);
+    padding: 16px 24px;
 }
 
-.paragraph {
-    font-size: 16px;
-    line-height: 26px;
-    color: #1F3F68;
+.header-navigation {
+    display: flex;
+    justify-content: space-between;
 }
 
-.main-title {
-    font-size: 64px;
-    color: #1F3F68;
+.icon-header {
+    width: 24px;
+    height: 24px;
+    margin-right: 8px;
 }
 
-.inner-title {
-    font-weight: 500;
-    font-size: 44px;
-    text-align: center;
-}
-
-.subtitle {
-    font-size: 36px;
-    text-align: center;
-}
-
-.small-title {
-    font-size: 20px;
-    line-height: 30px;
-    color: #1F3F68;
-}
-
-.form-input {
-    border: 1px solid #356EAD;
-    box-sizing: border-box;
-    border-radius: 10px;
-    opacity: 0.4;
-}
-
-.contacts-button {
-    color: #fff;
+.header-logo {
     text-transform: uppercase;
+    text-decoration: none;
+    color: #2D66EE;
+    font-size: 20px;
     font-weight: 700;
-    line-height: 26px;
-    border-radius: 10px;
-    border: 0px;
-    padding: 5px 20px;
-    background: linear-gradient(to right, rgb(62, 170, 253), rgb(146, 80, 237));
+    line-height: 18px;
+    width: 120px;
+}
+
+.header-links {
+    display: flex;
+    list-style-type: none;
+    font-family: "SF Pro Text";
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 18px;
+    letter-spacing: -0.154px;
+    gap: 24px;
+    margin: 0;
+    padding: 0;
+}
+
+.header-links li {
+    padding: 0;
+    display: flex;
+    margin: auto 0;
+}
+
+.header-links-black {
+    text-decoration: none;
+    color: #101828;
+    margin: auto 0;
+}
+
+.blue-text {
+    color: #2D66EE;
+}
+
+.header-links-blue {
+    gap: 0;
+}
+
+.header-links-blue .links-telephone-1 {
+    margin-right: 16px;
+}
+
+.header-links-blue .links-telephone-2 {
+    margin-right: 32px;
+}
+
+.start-block {
+    height: 900px;
+}
+
+.start-block-background {
+    width: 1440px;
+    margin: 0 auto;
+    background: url(/src/images/backgroung-start.png);
+    background-position: right;
+    background-repeat: no-repeat;
+}
+
+.main-text-block {
+    padding-top: 160px;
+    width: 600px;
+}
+
+.block-form {
+    width: 676px;
+    padding: 24px;
+    background-color: #fff;
+    border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
 }
 
 .form-contacts {
-    background-image: url(src\Безымян3ный.jpg);
-    background-repeat: no-repeat;
-    background-size: 100% auto;
+    display: flex;
+    align-items: center;
+    gap: 24px;
 }
 
-.form-contacts label {
-    display: block;
+.form-contacts input {
+    width: 224px;
+    font-family: "SF Pro Text";
+    font-size: 17px;
+    border: 0px;
+    border-bottom: 0.7px solid #D0D5DD;
+    outline: none;
+    padding: 8px 0px;
 }
 
-.breadcrumbs {
+.form-button {
+    background-color: #2D66EE;
+    color: #fff;
+    font-family: "SF Pro Text";
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 18px;
+    letter-spacing: -0.154px;
+    width: 132px;
+    border: 0px;
+    border-radius: 8px;
+    text-align: left;
+    padding: 11px 24px;
+}
+
+.development-info {
+    display: flex;
+    gap: 128px;
+    padding: 80px 0px;
+}
+
+.development-info-text {
+    width: 600px;
+}
+
+.development-info-text h3 {
+    font-family: "SF Pro Display";
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 24px;
+    letter-spacing: 0.38px;
+    margin: 0;
+}
+
+.development-paragraph {
+    font-family: "SF Pro Text";
+    font-size: 15px;
+    font-weight: 500;
+    line-height: 20px;
+    letter-spacing: -0.24px;
+    margin: 0;
+    margin-top: 32px;
+    margin-bottom: 34px;
+}
+
+.development-web-mobile {
+    font-family: "SF Pro Text";
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: -0.408px;
+    margin: 0;
+    margin-top: 16px;
+}
+
+.web-mobile-first {
+    margin-bottom: 32px;
+}
+
+.development-info-list {
+    width: 233px;
+    font-family: "SF Pro Display";
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.38px;
+}
+
+.info-list {
+    padding: 0;
+    list-style-type: none;
+    margin: 0;
+    margin-top: 12px;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.info-list li {
+    display: flex;
+    gap: 12px;
+}
+
+.info-list a {
+    text-decoration: none;
+    color: #1D2939;
+    margin: auto 0;
+}
+
+.info-list a:hover {
+    color: #101828;
+    font-weight: 600;
+    margin-bottom: 4px;
+    border-bottom: 1px #2D66EE solid;
+}
+
+.icon-list-arrow {
+    width: 24px;
+    height: 24px;
+    margin: auto 0;
+}
+
+.main-footer {
+    background-color: #101828;
+    color: #fff;
+    padding: 24px;
+    border-radius: 12px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.icon-footer {
+    width: 24px;
+    height: 24px;
+}
+
+.our-contacts-list {
+    display: flex;
+    justify-content: space-between;
+    list-style-type: none;
     padding: 0;
     margin: 0;
+}
+
+.our-contacts-list h3 {
+    margin: 0;
+    font-family: "SF Pro Text";
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 18px;
+    letter-spacing: -0.154px;
+    color: #aeaeae;
+    text-align: left;
     display: flex;
-    list-style-type: none;
-    background: linear-gradient(#fff, rgb(49, 128, 150));
+    align-items: center;
+    gap: 8px;
 }
 
-.breadcrumbs li {
-    padding: 10px;
-    border-radius: 0 25px 25px 0;
-    border-right: 2px solid #fff;
-    box-shadow: 6px 0px 3px -3px #000;
+.our-contacts-list li {
+    width: 294px;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
 }
 
-.breadcrumbs a {
-    color: #000;
-    text-decoration: none;
+.footer-paragpraph {
+    margin: 0;
+    font-family: "SF Pro Text";
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: -0.078px;
+    display: flex;
+    gap: 12px;
+    margin: 0 auto;
+}
+
+.icon-footer-carta {
+    width: 32px;
+    height: 16px;
 }
