--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -85,3 +85,308 @@
     color: #000;
     text-decoration: none;
 }
+@import "./global.css";
+@import "./fonts.css";
+@import "./utils.css";
+@import "./typography.css";
+
+.block-header {
+    width: 1224px;
+    margin: 0 auto;
+}
+
+.main-header {
+    width: 1124px;
+    background-color: #fff;
+    position: fixed;
+    top: 24px;
+    border-radius: 12px;
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.08);
+    padding: 16px 24px;
+    z-index: 10;
+}
+
+.header-navigation {
+    display: flex;
+    gap: 80px;
+    justify-content: space-between;
+}
+
+.three-line-open-menu {
+    display: none;
+}
+
+.view-mobile {
+    display: none;
+}
+
+.view-tablet {
+    display: none;
+}
+
+.icon-header {
+    width: 24px;
+    height: 24px;
+    margin-right: 8px;
+}
+
+.header-logo {
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #2D66EE;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 18px;
+    letter-spacing: -0.154px;
+    width: 120px;
+}
+
+.header-links {
+    display: flex;
+    list-style-type: none;
+    font-family: "SF Pro Text";
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 18px;
+    letter-spacing: -0.154px;
+    gap: 24px;
+    margin: 0;
+    padding: 0;
+}
+
+.header-links li {
+    padding: 0;
+    display: flex;
+    margin: auto 0;
+}
+
+.header-links-black {
+    text-decoration: none;
+    color: #101828;
+    margin: auto 0;
+}
+
+.blue-text {
+    color: #2D66EE;
+}
+
+.header-links-blue {
+    gap: 0;
+}
+
+.header-links-blue .links-telephone-1 {
+    margin-right: 16px;
+}
+
+.header-links-blue .links-telephone-2 {
+    margin-right: 32px;
+}
+
+.start-block {
+    height: 900px;
+}
+
+.start-block-background {
+    width: 1440px;
+    margin: 0 auto;
+    background: url(/src/images/backgroung-start.png);
+    background-position: right;
+    background-repeat: no-repeat;
+}
+
+.main-text-block {
+    padding-top: 160px;
+    width: 600px;
+}
+
+.block-form {
+    width: 676px;
+    padding: 24px;
+    background-color: #fff;
+    border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+    box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.16), 0px 0px 2px 0px rgba(0, 0, 0, 0.08);
+}
+
+.form-contacts {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+}
+
+.form-contacts input {
+    width: 224px;
+    font-family: "SF Pro Text";
+    font-size: 17px;
+    border: 0px;
+    border-bottom: 0.7px solid #D0D5DD;
+    outline: none;
+    padding: 8px 0px;
+}
+
+.form-button {
+    background-color: #2D66EE;
+    color: #fff;
+    font-family: "SF Pro Text";
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 18px;
+    letter-spacing: -0.154px;
+    width: 132px;
+    border: 0px;
+    border-radius: 8px;
+    text-align: left;
+    padding: 11px 24px;
+}
+
+.development-info {
+    display: flex;
+    gap: 128px;
+    padding: 80px 0px;
+}
+
+.development-info-text {
+    width: 600px;
+}
+
+.development-info-text h3 {
+    font-family: "SF Pro Display";
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 24px;
+    letter-spacing: 0.38px;
+    margin: 0;
+}
+
+.development-paragraph {
+    font-family: "SF Pro Text";
+    font-size: 15px;
+    font-weight: 500;
+    line-height: 20px;
+    letter-spacing: -0.24px;
+    margin: 0;
+    margin-top: 32px;
+    margin-bottom: 34px;
+}
+
+.development-web-mobile {
+    font-family: "SF Pro Text";
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: -0.408px;
+    margin: 0;
+    margin-top: 16px;
+}
+
+.web-mobile-first {
+    margin-bottom: 32px;
+}
+
+.development-info-list {
+    width: 233px;
+    font-family: "SF Pro Display";
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.38px;
+}
+
+.info-list {
+    padding: 0;
+    list-style-type: none;
+    margin: 0;
+    margin-top: 12px;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.info-list li {
+    display: flex;
+    gap: 12px;
+}
+
+.info-list a {
+    text-decoration: none;
+    color: #1D2939;
+    margin: auto 0;
+}
+
+.info-list a:hover {
+    color: #101828;
+    font-weight: 600;
+    margin-bottom: 4px;
+    border-bottom: 1px #2D66EE solid;
+}
+
+.icon-list-arrow {
+    width: 24px;
+    height: 24px;
+    margin: auto 0;
+}
+
+.main-footer {
+    background-color: #101828;
+    color: #fff;
+    padding: 24px;
+    border-radius: 12px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.icon-footer {
+    width: 24px;
+    height: 24px;
+}
+
+.our-contacts-list {
+    display: flex;
+    justify-content: space-between;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.our-contacts-list h3 {
+    margin: 0;
+    font-family: "SF Pro Text";
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 18px;
+    letter-spacing: -0.154px;
+    color: #aeaeae;
+    text-align: left;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.our-contacts-list li {
+    width: 294px;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+.footer-paragpraph {
+    margin: 0;
+    font-family: "SF Pro Text";
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: -0.078px;
+    display: flex;
+    gap: 12px;
+    margin: 0 auto;
+}
+
+.icon-footer-carta {
+    width: 32px;
+    height: 16px;
+}
