--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -1,8 +1,23 @@
-html {
-    font-family: 'Inter', sans-serif;
+body {
+    font-family: "Inter";
     font-weight: 400;
+    margin: 0;
 }
-
+    
+.blocks-center {
+    width: 1224px;
+    margin: 0 auto;
+}
+    
+.main-block {
+    background-color: #F2F4F7;
+    min-height: 500px;
+}
+    
+.background-white {
+    background-color: #fff;
+}
+    
 *,
 *:before,
 *:after {
